Reduce FlattenedDocValuesFormat disk usage and GC pressure
Reuse FieldBlockWriter across columns (T1): the constructor allocated
~128 KiB of int/byte arrays plus a ZSTD compressor per sub-field column.
With the block thresholds raised in 15ecbdb this became ~30× worse on
high-cardinality fields. A new reset(IndexOutput) method reuses all
pre-sized buffers and the compressor across the per-column loop in both
addBinaryField and doColumnWiseMerge.

Move per-block docId-delta and slotCount vint arrays inside the ZSTD
compressed region (H1): writing them raw outside the compression boundary
made them uncompressible overhead (~1-2 bytes per (doc,key) pair vs the
value bytes that compress well). With both arrays inside the ZSTD frame,
the compressor can exploit their redundancy alongside the value payload.
This requires bumping VERSION_CURRENT to 3; the reader range VERSION_START
through VERSION_CURRENT is accepted, and the format has not shipped so no
back-compat branch is needed.

For contiguous columns (FLAG_DOCS_CONTIGUOUS) the read-path presence check
is still O(1) without decompression. For non-contiguous columns the block
must be decompressed before findDocInBlock; benchmarks show this cost is
fully amortized by the block payload cache (payloadLoaded guard) across the
sequential scan, so sparse-read performance is unchanged in practice.

Measured on FlattenedKeyedIngestBenchmark (200k docs, 64 KiB blocks):
- MANY_KEYS flush: −10.4% disk, no ingest time change
- MANY_KEYS force-merge: −11.5% disk, −3% ingest time
- HIGH_CARDINALITY flush: −1.7% disk, −11% ingest time (T1 dominant)